--- a/src/app/demo/components/mentor-application/mentor-application-list/mentor-application-list.component.html
+++ b/src/app/demo/components/mentor-application/mentor-application-list/mentor-application-list.component.html
@@ -1,1 +1,126 @@
-<p>mentor-application-list works!</p>
+<div class="grid">
+    <div class="col-12">
+      <div class="card">
+        <h5>Mentor Applications</h5>
+        <p-table 
+          #dt 
+          [value]="applications" 
+          dataKey="id" 
+          [rows]="10" 
+          [loading]="loading" 
+          [rowHover]="true" 
+          styleClass="p-datatable-gridlines" 
+          [paginator]="true" 
+          [globalFilterFields]="['user.firstName','user.lastName','applicationText','status']" 
+          responsiveLayout="scroll">
+          
+          <ng-template pTemplate="caption">
+            <div class="flex justify-content-between flex-column sm:flex-row">
+              <button pButton label="Clear" class="p-button-outlined mb-2" icon="pi pi-filter-slash" (click)="clear(dt)"></button>
+              <span class="p-input-icon-left mb-2">
+                <i class="pi pi-search"></i>
+                <input pInputText type="text" (input)="onGlobalFilter(dt, $event)" placeholder="Search Keyword" class="w-full"/>
+              </span>
+            </div>
+          </ng-template>
+          
+          <ng-template pTemplate="header">
+            <tr>
+              <th>
+                <div class="flex justify-content-between align-items-center">
+                  Name
+                  <p-columnFilter type="text" field="user.name" display="menu" placeholder="Search by name"></p-columnFilter>                </div>
+              </th>
+              <th>
+                <div class="flex justify-content-between align-items-center">
+                  Application Text
+                  <p-columnFilter type="text" field="applicationText" display="menu" placeholder="Search by text"></p-columnFilter>
+                </div>
+              </th>
+              <th>
+                <div class="flex justify-content-between align-items-center">
+                  Experience
+                  <p-columnFilter type="boolean" field="hasPreviousExperience" display="menu"></p-columnFilter>
+                </div>
+              </th>
+              <th>
+                <div class="flex justify-content-between align-items-center">
+                  Date
+                  <p-columnFilter type="date" field="createdAt" display="menu" placeholder="mm/dd/yyyy"></p-columnFilter>
+                </div>
+              </th>
+              <th>
+                <div class="flex justify-content-between align-items-center">
+                  Status
+                  <p-columnFilter field="status" matchMode="equals" display="menu">
+                    <ng-template pTemplate="filter" let-value let-filter="filterCallback">
+                      <p-dropdown [ngModel]="value" [options]="statuses" (onChange)="filter($event.value)" placeholder="Any" [style]="{'min-width': '12rem'}" >
+                        <ng-template let-option pTemplate="item">
+                          <span [class]="'application-badge status-' + (option.value?.toLowerCase() || 'unknown')">{{option.label}}</span>
+                        </ng-template>
+                      </p-dropdown>
+                    </ng-template>
+                  </p-columnFilter>
+                </div>
+              </th>
+              <th style="min-width: 10rem;">
+                Actions
+              </th>
+            </tr>
+          </ng-template>
+          
+          <ng-template pTemplate="body" let-application>
+            <tr>
+              <td style="min-width: 12rem;">
+                {{ application.user.name }}
+                          </td>
+              <td style="min-width: 14rem;">
+                <ng-container *ngIf="application?.applicationText">
+                  {{application.applicationText | slice:0:50}}{{application.applicationText.length > 50 ? '...' : ''}}
+                </ng-container>
+                <ng-container *ngIf="!application?.applicationText">
+                  N/A
+                </ng-container>
+              </td>
+              <td class="text-center" style="min-width: 8rem;">
+                <i class="pi" [ngClass]="{'true-icon pi-check-circle text-green-500': application?.hasPreviousExperience, 'false-icon pi-times-circle text-pink-500': !application?.hasPreviousExperience}"></i>
+              </td>
+              <td style="min-width: 10rem;">
+                {{ application?.createdAt ? (application.createdAt | date: 'MM/dd/yyyy') : 'N/A' }}
+            </td>
+              <td style="min-width: 12rem;">
+                <span [class]="'application-badge status-' + (application?.status?.toLowerCase() || 'unknown')">
+                  {{application?.status || 'Unknown'}}
+                </span>
+              </td>
+              <td style="min-width: 10rem;">
+                <div class="flex gap-2">
+                  <button pButton pRipple icon="pi pi-check" class="p-button-rounded p-button-success" 
+                    (click)="updateStatus(application?.id!, ApplicationStatus.APPROVED)" 
+                    [disabled]="!application?.id || application?.status === ApplicationStatus.APPROVED"></button>
+                  <button pButton pRipple icon="pi pi-times" class="p-button-rounded p-button-danger" 
+                    (click)="updateStatus(application?.id!, ApplicationStatus.REJECTED)" 
+                    [disabled]="!application?.id || application?.status === ApplicationStatus.REJECTED"></button>
+                  <button pButton pRipple icon="pi pi-eye" class="p-button-rounded p-button-info" 
+                    [routerLink]="['/mentor-applications', application?.id]"
+                    [disabled]="!application?.id"></button>
+                </div>
+              </td>
+            </tr>
+          </ng-template>
+          
+          <ng-template pTemplate="emptymessage">
+            <tr>
+              <td colspan="6">No applications found.</td>
+            </tr>
+          </ng-template>
+          
+          <ng-template pTemplate="loadingbody">
+            <tr>
+              <td colspan="6">Loading applications data. Please wait.</td>
+            </tr>
+          </ng-template>
+        </p-table>
+      </div>
+    </div>
+  </div>
